crates/pg_syntax/tests/snapshots/postgres_regress/char@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a'::\"char\"::text;"
---
SelectStmt@0..25
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    TypeCast@7..24
      TypeCast@7..18
        AConst@7..10
          Sconst@7..10 "'a'"
        Typecast@10..12 "::"
        TypeName@12..18
          Ident@12..18 "\"char\""
      Typecast@18..20 "::"
      TypeName@20..24
        TextP@20..24 "text"
  Ascii59@24..25 ";"

