crates/pg_syntax/tests/snapshots/postgres_regress/char@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a'::text::\"char\";"
---
SelectStmt@0..25
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    TypeCast@7..24
      TypeCast@7..16
        AConst@7..10
          Sconst@7..10 "'a'"
        Typecast@10..12 "::"
        TypeName@12..16
          TextP@12..16 "text"
      Typecast@16..18 "::"
      TypeName@18..24
        Ident@18..24 "\"char\""
  Ascii59@24..25 ";"

