crates/pg_syntax/tests/snapshots/postgres_regress/char@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '\\377'::text::\"char\";"
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..27
    TypeCast@7..27
      TypeCast@7..19
        AConst@7..13
          Sconst@7..13 "'\\377'"
        Typecast@13..15 "::"
        TypeName@15..19
          TextP@15..19 "text"
      Typecast@19..21 "::"
      TypeName@21..27
        Ident@21..27 "\"char\""
  Ascii59@27..28 ";"

